MDEV-388 Creating a federated table with a non-existing server returns a random error code